Customizable card logic added for upgraded drafts
- Added new custom component to view and add customizable option to the draft card pool (using cutomizable-sheets)
- During an upgrade draft, for each legal customizable card an investigator could add to their deck, a random legal customizable option will be added to the card pool
- If the user picks this customizable option, a copy of the customizable card will be added to their if possible
- Refactored some frontend logic to ensure that these upgrades can be viewed from the deck preview while upgrading

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -854,6 +854,9 @@
         "start": "Start Draft",
         "insufficient_cards": "Your collection doesn't have enough legal cards for this investigator. You need at least {{required}} cards but only have {{available}}."
       },
+      "customization": {
+        "will_add_card_copy": "A copy of this card will be added to your deck."
+      },
       "picking": {
         "progress": "{{current}} / {{target}} cards",
         "pick_card": "Pick a card"
