--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -851,6 +851,7 @@
       "setup": {
         "cards_per_pick": "Cards per pick",
         "cards_per_pick_help": "Number of card options shown each pick",
+        "skips_allowed": "Skips allowed",
         "start": "Start Draft",
         "insufficient_cards": "Your collection doesn't have enough legal cards for this investigator. You need at least {{required}} cards but only have {{available}}."
       },
@@ -859,7 +860,8 @@
       },
       "picking": {
         "progress": "{{current}} / {{target}} cards",
-        "pick_card": "Pick a card"
+        "pick_card": "Pick a card",
+        "skip": "Skip"
       },
       "complete": {
         "title": "Draft Complete",
